--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     /* DetailPage Page */
     .detail-page {
       min-height: 100vh;
+      min-height: 100dvh;
       background-image: linear-gradient(90deg, rgba(0,0,0,0.04) 1px, transparent 1px),
                         linear-gradient(rgba(0,0,0,0.04) 1px, transparent 1px);
       background-size: 24px 24px;
