--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
       overflow-y: hidden;
       background: var(--white);
       min-height: 100vh;
+      min-height: 100vh;
     }
 
     /* DetailPage Page */
